# my_scraping_project

./: .gitignore  README.md  products.json  pyproject.toml  test_products.json
src/: main.py  models.py  notification_service.py  scraper_service.py  storage.py
src/security/: api_key_security.py
src/storage/: base_storage.py  image_storage.py  json_storage.py
tests/: test_api.py  test_integration.py  test_scraper_service.py
